# RainDigest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  organize.py  pyproject.toml  test_gemini.py
src/: config.py  llm.py  main.py  media.py  organizer.py  raindrop.py  readwise.py  storage.py
