[tool.poetry]
name = "raindigest"
version = "0.1.0"
description = "Raindrop.io Video Summarizer with LLM"
authors = ["Antigravity"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
yt-dlp = "^2025.01.12"
google-generativeai = "^0.8.4"
pydantic = "^2.10.0"
loguru = "^0.7.2"
tenacity = "^8.5.0"
markdown = "^3.10"
boto3 = "^1.42.17"
opencv-python-headless = "^4.12.0.88"
numpy = ">=2.0.0,<2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
